[gd_scene load_steps=52 format=3 uid="uid://dcksprsjtjgq0"]

[ext_resource type="Script" path="res://Combat/Knight.gd" id="1_wqhvi"]
[ext_resource type="Texture2D" uid="uid://2rspsht1syq6" path="res://Assets/Club/Attack_1.png" id="2_t18wg"]
[ext_resource type="Texture2D" uid="uid://cdgroiv72ximl" path="res://Assets/Club/Attack_2.png" id="3_y64h5"]
[ext_resource type="Texture2D" uid="uid://3p2ruqchovks" path="res://Assets/Club/Dead.png" id="4_qx10o"]
[ext_resource type="Texture2D" uid="uid://dhm5clm4lf0dx" path="res://Assets/Club/Hurt.png" id="5_3n1oi"]
[ext_resource type="Texture2D" uid="uid://cvdrs8ucik2ay" path="res://Assets/Club/Idle.png" id="5_omq8k"]
[ext_resource type="Texture2D" uid="uid://dbsqbbnsonc08" path="res://Assets/Club/Run.png" id="6_331ya"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ckyu7"]
size = Vector2(20, 64)

[sub_resource type="Animation" id="Animation_qt38g"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AttackArea/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_nb1xx"]
resource_name = "attack1"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack1"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackArea/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_y2u5p"]
resource_name = "attack2"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack2"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackArea/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_r11cu"]
resource_name = "death"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"death"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_tw8ub"]
resource_name = "hit"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"hit"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_rx60r"]
resource_name = "idle"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_tl35o"]
resource_name = "run"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"run"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jcmju"]
_data = {
"RESET": SubResource("Animation_qt38g"),
"attack1": SubResource("Animation_nb1xx"),
"attack2": SubResource("Animation_y2u5p"),
"death": SubResource("Animation_r11cu"),
"hit": SubResource("Animation_tw8ub"),
"idle": SubResource("Animation_rx60r"),
"run": SubResource("Animation_tl35o")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_xxm7p"]
atlas = ExtResource("2_t18wg")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ldasd"]
atlas = ExtResource("2_t18wg")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0dvja"]
atlas = ExtResource("2_t18wg")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_geis7"]
atlas = ExtResource("2_t18wg")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_np4i8"]
atlas = ExtResource("2_t18wg")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_by5on"]
atlas = ExtResource("3_y64h5")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_msk1u"]
atlas = ExtResource("3_y64h5")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_cuog2"]
atlas = ExtResource("3_y64h5")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vam5q"]
atlas = ExtResource("3_y64h5")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vxi04"]
atlas = ExtResource("3_y64h5")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_cyavc"]
atlas = ExtResource("4_qx10o")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_mqyff"]
atlas = ExtResource("4_qx10o")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_o30xx"]
atlas = ExtResource("4_qx10o")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_eckjs"]
atlas = ExtResource("4_qx10o")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhwr7"]
atlas = ExtResource("5_3n1oi")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_k7xb1"]
atlas = ExtResource("5_3n1oi")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_uawb0"]
atlas = ExtResource("5_omq8k")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_w7fyq"]
atlas = ExtResource("5_omq8k")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_pu0ku"]
atlas = ExtResource("5_omq8k")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_swo17"]
atlas = ExtResource("5_omq8k")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8fins"]
atlas = ExtResource("5_omq8k")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_egqr1"]
atlas = ExtResource("5_omq8k")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_a57li"]
atlas = ExtResource("6_331ya")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujfyl"]
atlas = ExtResource("6_331ya")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_60bsx"]
atlas = ExtResource("6_331ya")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_pls6t"]
atlas = ExtResource("6_331ya")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_h1alf"]
atlas = ExtResource("6_331ya")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_skyt2"]
atlas = ExtResource("6_331ya")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_us0eh"]
atlas = ExtResource("6_331ya")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_sbwrn"]
atlas = ExtResource("6_331ya")
region = Rect2(896, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_sgtoa"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xxm7p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ldasd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0dvja")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_geis7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_np4i8")
}],
"loop": true,
"name": &"attack1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_by5on")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_msk1u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cuog2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vam5q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vxi04")
}],
"loop": true,
"name": &"attack2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cyavc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mqyff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o30xx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eckjs")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhwr7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k7xb1")
}],
"loop": false,
"name": &"hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uawb0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w7fyq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pu0ku")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_swo17")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8fins")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_egqr1")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a57li")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujfyl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60bsx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pls6t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h1alf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_skyt2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_us0eh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sbwrn")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g3al4"]
size = Vector2(795, 20)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_apjq3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8jjqs"]
size = Vector2(110.769, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wpawc"]
size = Vector2(51.3846, 40)

[node name="Knight" type="CharacterBody2D"]
scale = Vector2(2, 2)
collision_layer = 0
script = ExtResource("1_wqhvi")
facing_left_position = Vector2(-29.692, 0)
facing_right_position = Vector2(29.692, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ckyu7")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jcmju")
}

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -32)
sprite_frames = SubResource("SpriteFrames_sgtoa")
animation = &"attack1"
autoplay = "idle"
frame = 1

[node name="EnemyDetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetectionArea"]
shape = SubResource("RectangleShape2D_g3al4")

[node name="Healthbar" type="ProgressBar" parent="."]
modulate = Color(0.447059, 0.305882, 0.258824, 1)
offset_left = -16.0
offset_top = 32.0
offset_right = 197.0
offset_bottom = 52.0
scale = Vector2(0.15, 0.15)
theme_override_styles/fill = SubResource("StyleBoxFlat_apjq3")
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="AttackDetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDetectionArea"]
shape = SubResource("RectangleShape2D_8jjqs")

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(29.6923, 0)
shape = SubResource("RectangleShape2D_wpawc")
disabled = true

[node name="AttackCooldownTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_knight_animation_finished"]
[connection signal="body_entered" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_entered"]
[connection signal="body_exited" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_exited"]
[connection signal="body_entered" from="AttackDetectionArea" to="." method="_on_attack_detection_area_body_entered"]
[connection signal="body_exited" from="AttackDetectionArea" to="." method="_on_attack_detection_area_body_exited"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="timeout" from="AttackCooldownTimer" to="." method="_on_attack_cooldown_timer_timeout"]
